...
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:src="@drawable/mood_flow_1"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/mood_1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
